# PFASGroups

./: .gitignore  .pylintrc  .readthedocs.yaml  BYCOMPONENT_UPDATES.md  COMPONENT_FRACTION_REFACTORING.md  COMPREHENSIVE_METRICS_SUMMARY.md  DOCUMENTATION.md  FUNCTION_DOCUMENTATION.md  FUNCTION_RENAME_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MULTISMARTS_REFACTORING.md  OECD_SHOWCASE_SUMMARY.md  PARAMETER_NAMING_GUIDE.md  PFASGroups.py  Performance_Comparison_PFASGroups_vs_PFAS-Atlas.md  QUICK_REFERENCE.md  README.md  SQL_EXPORT_README.md  SQL_QUICK_REFERENCE.md  TESTING_SUMMARY_GUIDE.md  USER_GUIDE.md  __init__.py  _run_nb.py  _run_nb_chem.py  _test2.py  _test_examples.py  _test_fix.py  _test_parse.py  _tmp_analysis.py  _tmp_query.py  add_telomer_counter_examples.py  analyze_eu_smarts.py  check_names.py  check_telomers.py  compare_constraints.py  conftest.py  core.py  debug_9carbons.py  debug_component.py  debug_component_calc.py  (+47 more)
HalogenGroups/: ComponentsSolverModel.py  HalogenGroupModel.py  PFASDefinitionModel.py  __init__.py  cli.py  core.py  draw_mols.py  fingerprints.py  fragmentation.py  generate_homologues.py  generate_mol.py  generate_paper_figures.py  getter.py  homologue_series.py  parser.py  prioritise.py  results_model.py
HalogenGroups.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PFASGroups/: ComponentsSolverModel.py  HalogenGroupModel.py  PFASDefinitionModel.py  PFASEmbeddings.py  __init__.py  cli.py  core.py  draw_mols.py  embeddings.py  fingerprints.py  fragmentation.py  generate_homologues.py  generate_mol.py  generate_paper_figures.py  getter.py  homologue_series.py  parser.py  prioritise.py  results_model.py
PFASGroups.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
PFASgroups/: ComponentsSolverModel.py  PFASDefinitionModel.py  PFASGroupModel.py  __init__.py  cli.py  core.py  draw_mols.py  fingerprints.py  fragmentation.py  generate_homologues.py  generate_mol.py  generate_paper_figures.py  getter.py  homologue_series.py  parser.py  prioritise.py  results_model.py  test_examples.py
PFASgroups.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
benchmark/: BENCHMARK_CHANGES_FEB2026.md  BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.md  BREAKPOINT_EXPLANATION.md  COMPLEXITY_METRICS_UPDATE.md  COMPLEXITY_UPDATE_COMPLETE.md  CORRESPONDENCE_ANALYSIS.md  EXTENDING_TIMING_RESULTS.md  FIXING_MISSING_DATA.md  NEXT_STEPS.md  PFASGroups_Performance_Summary.md  PFAS_DEFINITIONS_QUICK_REF.md  README.md  REANALYSIS_SUMMARY.md  RUNNING_BENCHMARKS.md  THREE_WAY_ANALYSIS_SUMMARY.md  _check_shapes.py  _rebuild.py  accuracy_by_origin_summary.csv  analyze_benchmark.py  analyze_benchmarks_simple.py  analyze_complex.py  analyze_definitions_benchmark.py  analyze_timing.py  analyze_timing_models.py  assess_valence_fragmentation.py  atlas_pfasgroups_correspondence_summary.csv  atlas_pfasgroups_sankey.html  benchmark_final_report.md  benchmark_final_results.csv  benchmark_final_summary.json  benchmark_pfas_definitions.py  benchmark_test_compounds.csv  benchmark_validation_analysis.json  complex_benchmark_report_20251229_120718.html  complex_benchmark_report_20251229_153516.html  complex_benchmark_report_20251231_214458.html  complex_benchmark_report_20260107_094420.html  complex_benchmark_report_20260110_142340.html  (+119 more)
data/: fpaths.json
docs/: ResultsFingerprint_Guide.md  algorithm.rst  benchmarking.rst  changelog.rst  cli.rst  conf.py  contributing.rst  customization.rst  fingerprint_options.md  halogengroups.rst  index.rst  installation.rst  license.rst  pfas_definitions.rst  prioritization.rst  quickstart.rst  requirements.txt  tutorial.rst
examples/: embedding_with_graph_metrics.py  oecd_fingerprint_showcase.py  oecd_showcase_simple.py  oecd_simple_test.py  prioritization_examples.py  results_fingerprint_analysis.py
gui/: __init__.py  __main__.py  app.py  style.py  workers.py
parse_db/: DATABASE_SCHEMA.md  PARSING_GUIDE.md  PFASGROUPS_ALL_HALOGENS.md  analyze_clinventory_results.py  analyze_pfasgroups_results.py  apply_pfasgroups_all_halogens.py  create_comprehensive_figure.py
report/: Analysis_Deliverables_Summary.md  PFAS_Algorithm_Analysis_Summary.md  Technical_Analysis_Misidentifications.md  analyze_misidentifications.py  examine_false_negative.py  final_corrected_analyzer.py  final_corrected_pfas_analysis.html  final_corrected_results.csv  generic_test_results.csv  hierarchical_validation_results.csv  pfas_algorithm_analyzer.py  pfas_detailed_analysis_report.html  pfas_simple_analyzer.py  simple_corrected_analyzer.py  simple_corrected_pfas_analysis.html  simple_corrected_results.csv  specificity_test_groups.json  specificity_test_results.csv  test_summary_report.json
reports/: telomer_validation.html  timing_analysis_20260207_121031.html  timing_analysis_20260314_185630.html  timing_analysis_20260314_200111.html  timing_analysis_20260314_203046.html  timing_analysis_20260314_211735.html  timing_analysis_20260314_212041.html  timing_analysis_20260314_213610.html  timing_analysis_20260315_065228.html  timing_analysis_20260330_163345.html
specificity/: generate_examples.py  generate_graph_PFASgroups.py  specificity_test_excluded_groups.json  specificity_test_groups_network.gml
tests/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  add_smarts_size_fields.py  demo_metrics.py  export_misclassified.py  extract_and_fix_unparsed_sdf.py  generate_examples.py  generate_graph_PFASgroups.py  generic_test_results.csv  run_groups_definitions_tests.py  specificity_test_results.csv  test_bde_resistance.py  test_component_fraction.py  test_component_fractions.py  test_component_ratios.py  test_comprehensive_metrics.py  test_database_integration.py  test_definition_comparison.py  test_eu_fix.py  test_failures_report.txt  test_fingerprints_vs_txppfas.py  test_fraction_analysis.py  test_generate_homologues.py  test_halogen_groups_smarts.py  test_import_verbose.py  test_linker_smarts.py  test_manual_size_override.py  test_metrics.py  test_metrics_detailed.py  test_minmaxkl_benchmark.py  (+25 more)
(+1142 files in other folders)
