[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HalogenGroups"
version = "3.1.0"
description = "A comprehensive cheminformatics package for automated detection, classification, and analysis of halogenated substances, with a focus on per- and polyfluoroalkyl substances (PFAS). Combines SMARTS pattern matching, molecular formula constraints, and graph-based pathfinding to identify 116 group classifications (28 OECD-defined PFAS groups, 45 generic groups and 43 telomers connected to halogenated components) with halogenated component size determination. Supports multi-halogen fingerprinting (F, Cl, Br, I) with per/poly saturation filtering and stackable fingerprint vectors."
authors = [
    { name = "Luc T. Miaz", email = "luc@miaz.ch" }
]
maintainers = [
    { name = "Luc T. Miaz", email = "luc@miaz.ch" }
]
readme = "README.md"
requires-python = ">=3.7"
license = "CC-BY-NC-4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Environmental Science",
]
keywords = [
    "PFAS",
    "halogenated substances",
    "per- and polyfluoroalkyl substances",
    "chemical classification",
    "cheminformatics",
    "environmental chemistry",
    "molecular structure",
    "fingerprint",
    "multi-halogen",
    "fluorine",
    "chlorine",
    "bromine",
    "iodine",
]

dependencies = [
    "rdkit",
    "numpy",
    "pandas",
    "networkx",
    "tqdm",
    "svgutils",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
database = [
    "sqlalchemy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/lucmiaz/PFASGroups"
Repository = "https://github.com/lucmiaz/PFASGroups"
Documentation = "https://pfasgroups.readthedocs.io"
"Bug Tracker" = "https://github.com/lucmiaz/PFASGroups/issues"

[project.scripts]
pfasgroups = "PFASgroups.cli:main"

[tool.setuptools]
packages = ["HalogenGroups", "PFASgroups"]

[tool.setuptools.package-data]
HalogenGroups = ["data/*.json", "data/*.txt"]
PFASgroups = ["data/*.json", "data/*.txt"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "groups: Tests for PFAS group identification",
    "definitions: Tests for PFAS definition validation",
    "smoke: Quick smoke tests for basic functionality",
]

# Custom metadata
[tool.pfasgroups]
acknowledgements = "This work was supported by the European Union's Horizon 2020 research and innovation programme under grant agreement No 101036756 (ZeroPM - Work Package 2). Developed at the Department of Environmental Science, Stockholm University, Sweden."
