[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PFASGroups"
version = "3.2.2"
description = "A comprehensive cheminformatics package for automated detection, classification, and analysis of halogenated substances, with a focus on per- and polyfluoroalkyl substances (PFAS). Combines SMARTS pattern matching, molecular formula constraints, and graph-based pathfinding to identify 119 groups. Supports creations of embeddings with graph metrics for Machine Learning workflows."
authors = [
    { name = "Luc T. Miaz", email = "luc@miaz.ch" }
]
maintainers = [
    { name = "Luc T. Miaz", email = "luc@miaz.ch" }
]
readme = "README.md"
requires-python = ">=3.7"
license = "CC-BY-NC-4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "PFAS",
    "halogenated substances",
    "per- and polyfluoroalkyl substances",
    "chemical classification",
    "cheminformatics",
    "environmental chemistry",
    "molecular structure",
    "fingerprint",
    "multi-halogen",
    "fluorine",
    "chlorine",
    "bromine",
    "iodine",
]

dependencies = [
    "rdkit",
    "numpy",
    "pandas",
    "networkx",
    "tqdm",
    "svgutils",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
database = [
    "sqlalchemy>=1.4.0",
]
gui = [
    "PySide6>=6.4",
    "PySide6-WebEngineWidgets>=6.4",
    "plotly>=5.0",
    "umap-learn>=0.5",
    "openpyxl>=3.0",
    "sqlalchemy>=1.4.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/lucmiaz/PFASGroups"
Repository = "https://github.com/lucmiaz/PFASGroups"
Documentation = "https://pfasgroups.readthedocs.io"
"Bug Tracker" = "https://github.com/lucmiaz/PFASGroups/issues"

[project.scripts]
pfasgroups = "PFASGroups.cli:main"
halogengroups = "PFASGroups.cli:main_halogen"
pfasgroups-gui = "gui.__main__:main"

[tool.setuptools]
packages = ["HalogenGroups", "PFASGroups", "gui", "gui.tabs", "gui.utils"]

[tool.setuptools.package-data]
HalogenGroups = ["data/*.json", "data/*.txt"]
PFASGroups = ["data/*.json", "data/*.txt"]
gui = ["data/*.html", "data/*.css", "data/*.js"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "groups: Tests for PFAS group identification",
    "definitions: Tests for PFAS definition validation",
    "smoke: Quick smoke tests for basic functionality",
]

# Custom metadata
[tool.pfasgroups]
acknowledgements = "This work was supported by the European Union's Horizon 2020 research and innovation programme under grant agreement No 101036756 (ZeroPM - Work Package 2). Developed at the Department of Environmental Science, Stockholm University, Sweden."
