[metadata]
name = PFASgroups
version = 2.2.1
description = A comprehensive cheminformatics package for automated detection, classification, and analysis of per- and polyfluoroalkyl substances (PFAS) in chemical databases.
long_description = file: README.md
long_description_content_type = text/markdown
author = Luc Miaz
author_email = luc@miaz.ch
license = MIT
