[metadata]
name = HalogenGroups
version = 3.1.0
description = A comprehensive cheminformatics package for automated detection, classification, and analysis of halogenated substances, with a focus on per- and polyfluoroalkyl substances (PFAS). Supports multi-halogen fingerprinting (F, Cl, Br, I) with per/poly saturation filtering and stackable fingerprint vectors.
long_description = file: README.md
long_description_content_type = text/markdown
author = Luc T. Miaz
author_email = luc@miaz.ch
license = MIT
